hphp/hack/test/typecheck/reactive/mutable_args4.php.exp
File "mutable_args4.php", line 7, characters 14-18:
A mutable expression may not be passed as multiple arguments where at least one matching parameter is mutable. Matching parameter here is mutable (Typing[4269])
File "mutable_args4.php", line 7, characters 5-9:
This is where it was used before, being passed as mutable
